// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component should render span element by default 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

<div>
  <span
    class="c0"
  />
</div>
`;

exports[`Text Component should render strong element for strong 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 700;
  color: inherit;
}

<div>
  <strong
    class="c0"
  />
</div>
`;

exports[`Text Component should render with all the props 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 200;
  color: pink;
  text-transform: uppercase;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<div>
  <span
    class="c0"
  />
</div>
`;
